operations/k8s/local/expiration-redis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-redis-deploy
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration-redis-app
  template:
    metadata:
      labels:
        app: expiration-redis-app
    spec:
      containers:
        - name: expiration-redis
          image: redis
---
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-service
spec:
  selector:
    app: expiration-redis-app
  ports:
    - name: expiration-redis-port
      protocol: TCP
      port: 6379
      targetPort: 6379
