operations/k8s/local/media-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-deploy
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media-app
  template:
    metadata:
      labels:
        app: media-app
    spec:
      containers:
        - name: media
          image: rentit/media
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: media-service
  namespace: ingress-nginx
spec:
  selector:
    app: media-app
  ports:
    - name: media-port
      protocol: TCP
      port: 3000
      targetPort: 3000
