operations/k8s/local/payment-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deploy
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-app
  template:
    metadata:
      labels:
        app: payment-app
    spec:
      containers:
        - name: payment
          image: rentit/payment
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  selector:
    app: payment-app
  ports:
    - name: payment-port
      protocol: TCP
      port: 3000
      targetPort: 3000
