operations/k8s/local/product-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deploy
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-app
  template:
    metadata:
      labels:
        app: product-app
    spec:
      containers:
        - name: product
          image: rentit/product
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product-app
  ports:
    - name: product-port
      protocol: TCP
      port: 3000
      targetPort: 3000
