operations/k8s/local/rentit-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rentit-deploy
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rentit-app
  template:
    metadata:
      labels:
        app: rentit-app
    spec:
      containers:
        - name: rentit
          image: rentit/rentit
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: rentit-service
spec:
  selector:
    app: rentit-app
  ports:
    - name: rentit-port
      protocol: TCP
      port: 3000
      targetPort: 3000
